--- a/css/light.css
+++ b/css/light.css
@@ -3,7 +3,7 @@
 
 Turn Off the Lights
 The entire page will be fading to dark, so you can watch the video as if you were in the cinema.
-Copyright (C) 2016 Stefan vd
+Copyright (C) 2017 Stefan vd
 www.stefanvd.net
 www.turnoffthelights.com
 
@@ -27,17 +27,32 @@ To view a copy of this license, visit http://creativecommons.org/licenses/GPL/2.
 //================================================
 */
 
+.stefanvdscreenshader{z-index:2147483647!important;position:fixed!important;width:100%!important;height:100%!important;top:0!important;left:0!important;right:0!important;bottom:0!important;pointer-events:none!important}
+.stefanvdvideocontrolstop{z-index:1005!important}
+.stefanvdvideocontrolsitem{z-index:1001!important}
+.stefanvdvideotop{z-index:1001!important;position:relative!important;visibility:visible!important}
+.stefanvditemtop{z-index:1001!important;position:relative!important;visibility:visible!important}
+.stefanvdvideoauto{z-index:auto!important}
+.stefanvdotherdown{z-index:950!important}
+.stefanvdcontainauto{contain:none!important}
 @-webkit-keyframes totlbounceInDown{0%{-webkit-transform:translateY(-2000px)}60%{-webkit-transform:translateY(0px)}70%{-webkit-transform:translateY(-80px)}80%{-webkit-transform:translateY(0px)}90%{-webkit-transform:translateY(-10px)}100%{-webkit-transform:translateY(0)}}
 /* Visualization */
 .stefanvdvisualization{z-index:100000000!important;overflow:hidden!important;pointer-events:none!important}
-.stefanvdvis{z-index:100000000!important;position:absolute!important;background:rgba(0,0,0,0.4)!important;color:rgba(255,255,255,0.8)!important;user-select:none!important;-webkit-user-select:none!important}
+.stefanvdvis{z-index:100000000!important;position:absolute!important;color:rgba(255,255,255,0.8)!important;user-select:none!important;-webkit-user-select:none!important;overflow:hidden!important}
 .stefanvdvis div{display:inline-block!important;float:left!important;line-height:normal!important;padding:10px 15px!important;font-size:14px!important;user-select:none!important;-webkit-user-select:none!important;cursor:pointer!important}
 .stefanvdvis div:first-child{vertical-align:top!important;padding:6px 15px!important;font-size:20px!important}
-.stefanvdvis div:nth-child(3),.stefanvdvis div:nth-child(4),.stefanvdvis div:nth-child(5),.stefanvdvis div:nth-child(6),.stefanvdvis div:nth-child(9){display:inline-block!important;padding:20px 15px 15px 15px!important;opacity:.8!important;background-size:50% 50%!important;background-repeat:no-repeat!important;background-position:50% 50%!important;vertical-align:top!important;font-size:14px!important;user-select:none!important;-webkit-user-select:none!important;cursor:pointer!important}
-.stefanvdvis div:nth-child(9){float:right!important}
+.stefanvdvis div:nth-child(3),.stefanvdvis div:nth-child(4),.stefanvdvis div:nth-child(5),.stefanvdvis div:nth-child(6),.stefanvdvis div:nth-child(9),.stefanvdvis div:nth-child(10),.stefanvdvis div:nth-child(11){display:inline-block!important;padding:20px 15px 15px 15px!important;opacity:.8!important;background-size:50% 50%!important;background-repeat:no-repeat!important;background-position:50% 50%!important;vertical-align:top!important;font-size:14px!important;user-select:none!important;-webkit-user-select:none!important;cursor:pointer!important}
+.stefanvdvis div:nth-child(9),.stefanvdvis div:nth-child(10),.stefanvdvis div:nth-child(11){float:right!important}
 .stefanvdvis div:hover{color:rgba(255,255,255,1)!important;opacity:1!important}
+/* Video Zoom */
+.stefanvdzoom{z-index:200000000!important;position:absolute!important;color:rgba(255,255,255,0.8)!important;user-select:none!important;-webkit-user-select:none!important}
+.stefanvdzoom div{display:inline-block!important;float:left!important;vertical-align:top!important;line-height:normal!important;margin:5px!important;text-align:center!important;width:20px!important;user-select:none!important;-webkit-user-select:none!important;cursor:pointer!important;font-size:14px!important}
+.stefanvdzoom div:nth-child(9),.stefanvdzoom div:nth-child(10),.stefanvdzoom div:nth-child(11){width:100%!important;margin:20px 0 0 0!important}
+.stefanvdzoom div:nth-child(11){display:none!important;width:calc(100% - 10px)!important;margin:20px 0 0 0!important;font-size:12px!important;padding:5px!important;background:green!important;bottom:0!important;left:0!important;position:absolute!important}
+.stefanvdzoomstage{z-index:200000000!important;overflow:hidden!important;pointer-events:none!important}
+.stefanvdzoomcanvas{pointer-events:none!important}
 /* Atmosphere */
-#stefanvdvivideffect{z-index:1000!important;overflow:hidden;pointer-events:none}
+.stefanvdvivideffect{position:absolute!important;z-index:1000!important;overflow:hidden;pointer-events:none}
 /* Lights */
 .stefanvdlightareoff{position:fixed;top:0;left:0;width:100%;height:100%;z-index:999;opacity:0}
 /* Corner */
@@ -47,7 +62,7 @@ To view a copy of this license, visit http://creativecommons.org/licenses/GPL/2.
 #stefanvdtheater{position:fixed!important;top:0!important;left:0!important;width:100%!important;height:100%!important;margin:0!important;z-index:998!important}
 /* Eye div */
 @-webkit-keyframes slidedown{from{top:-100%;-webkit-animation-timing-function:ease-out}to{top:5px}}
-#stefanvdlightseye{-webkit-animation-name:slidedown;-webkit-animation-duration:.75s;position:fixed!important;top:5px!important;right:5px!important;background-color:rgba(0,0,0,.8)!important;color:#fff!important;border-radius:5px!important;padding:10px!important;border:1px solid gray!important;margin:0!important;z-index:5000!important}
+#stefanvdlightseye{-webkit-animation-name:slidedown;-webkit-animation-duration:.75s;animation-name:slidedown;animation-duration:.75s;position:fixed!important;top:5px!important;right:5px!important;background-color:rgba(0,0,0,.8)!important;color:#fff!important;border-radius:5px!important;padding:10px!important;border:1px solid gray!important;margin:0!important;z-index:5000!important}
 /* Readerbar */
 @-webkit-keyframes slideup{from{bottom:-100%;-webkit-animation-timing-function:ease-out}to{bottom:0}}
 #totlreaderbar{position:fixed!important;bottom:5px!important;right:5px!important;z-index:2147483647!important}
@@ -59,11 +74,11 @@ To view a copy of this license, visit http://creativecommons.org/licenses/GPL/2.
 #__totl-tidbit-box{display:block!important;position:fixed!important;z-index:2147483647!important;opacity:1!important;top:auto!important;bottom:0!important;left:auto!important;right:0!important;width:178px;min-width:0!important;max-width:178px!important;min-height:0!important;max-height:80px!important;margin:4px!important;padding:0!important;overflow:hidden!important;background-color:transparant!important;border:1px solid rgba(255,255,255,.5)!important;border-radius:3px!important}
 #__totl-wrapper{background-color:rgba(0,0,0,.4)!important;padding:4px 0 0!important}
 #__totl-wrapper img{margin:0!important}
-#__totl-min{width:14px!important;height:14px!important;position:absolute!important;right:5px!important;background-repeat:no-repeat!important;background-position:right top!important;cursor:pointer!important}
-#__totl-min:hover{width:14px!important;height:14px!important;position:absolute!important;right:5px!important;background-repeat:no-repeat!important;background-position:right top!important;cursor:pointer!important}
-#__totl-tidbit-box,#__totl-tidbit-box div,#__totl-tidbit-box span{float:none!important;color:#eee!important;font:menu;font-size:9pt!important;white-space:normal!important;letter-spacing:normal!important;word-spacing:normal!important;line-height:11pt!important;text-align:left!important;text-decoration:none!important;cursor:default!important}
-#__totl-tidbit-box,#__totl-tidbit-box div{-webkit-animation-name:slideup;-webkit-animation-duration:.75s}
-#__totl-tidbit-box div,#__totl-tidbit-box span{width:auto!important;-webkit-user-select:none!important}
+#__totl-min{text-align:center!important;width:14px!important;height:14px!important;position:absolute!important;right:5px!important;background-repeat:no-repeat!important;background-position:right top!important;cursor:pointer!important;border:1px solid transparent!important;border-radius:3px!important}
+#__totl-min:hover{text-align:center!important;width:14px!important;height:14px!important;position:absolute!important;right:5px!important;background-repeat:no-repeat!important;background-position:right top!important;cursor:pointer!important;border:1px solid rgba(255,255,255,0.498039)!important;border-radius:3px!important}
+#__totl-tidbit-box,#__totl-tidbit-box div,#__totl-tidbit-box span{float:none!important;color:#eee!important;font:menu;font-size:9pt!important;white-space:normal!important;letter-spacing:normal!important;word-spacing:normal!important;line-height:11pt!important;text-decoration:none!important;cursor:default!important}
+#__totl-tidbit-box,#__totl-tidbit-box div{-webkit-animation-name:slideup;-webkit-animation-duration:.75s;animation-name:slideup;animation-duration:.75s}
+#__totl-tidbit-box div,#__totl-tidbit-box span{-webkit-user-select:none!important;user-select:none!important}
 #__totl-box-info{display:block!important;min-height:18px!important;margin:0 0 0 4px !important;padding:0 0 2px 20px !important;background-repeat:no-repeat!important;background-position:left top!important}
 .__totl-box-title span{font-family:verdana 14px!important;font-weight:400!important}
 #__totl-box-tidbits{display:block!important}
@@ -71,7 +86,7 @@ To view a copy of this license, visit http://creativecommons.org/licenses/GPL/2.
 .__totl-box-msg input[type=range]{height:21px}
 #__totl-tidbit-box .__totl-box-tidbit:hover,#__totl-tidbit-box .__totl-box-tidbit:hover span{color:#ff8!important;cursor:pointer!important}
 .__totl-nowrap{white-space:nowrap!important}
-.__totl-icon{position:absolute!important;top:4px!important;left:4px!important;height:16px!important;width:16px!important}
+.__totl-icon{position:absolute!important;top:6px!important;left:6px!important;font-size:18px!important}
 /* Slider */
 #totlgammaVal{width:26px!important;height:20px!important;margin-left:3px!important;margin-right:3px!important;padding:0!important;border:0!important;position:relative!important;background-color:transparent!important;color:#fff!important;font-size:12px!important;font-family:Verdana,Geneva,Tahoma,sans-serif!important}
 #totlrange{-webkit-appearance:slider-horizontal!important;padding:0!important;margin:2px!important;border:0!important;position:relative!important;background-color:transparent!important;color:#fff!important;font-size:12px!important;font-family:Verdana,Geneva,Tahoma,sans-serif!important}
